<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

<RelativeLayout
    android:id="@+id/header"
    android:layout_width="match_parent"
    android:layout_height="@dimen/highHF"
    android:orientation="horizontal"
    android:padding="@dimen/dp8">
    <ImageView
        android:layout_width="@dimen/headImg"
        android:layout_height="@dimen/headImg"
        android:layout_alignParentStart="true"
        android:src="@drawable/ic_back"/>

    <TextView
        android:layout_width="@dimen/headTextW"
        android:layout_height="@dimen/headTextH"
        android:layout_alignParentCenter="true"
        android:layout_marginLeft="@dimen/dp72"
        android:layout_marginTop="@dimen/dp8"
        android:text="@string/header_text"
        android:textColor="@color/colorText"
        android:textSize="@dimen/textSize20" />
    <ImageView
        android:layout_width="@dimen/headImg"
        android:layout_height="@dimen/headImg"
        android:layout_alignParentEnd="true"
        android:src="@drawable/ic_search"/>
</RelativeLayout>
    <RelativeLayout
        android:id="@+id/block"
        style="@style/blockStyle"
        android:layout_height="@dimen/hBlock1"
        android:layout_marginTop="@dimen/dp16">
        <RelativeLayout
            style="@style/headerBlock">
            <ImageView
                style="@style/avatar"
                android:src="@drawable/user1"/>
            <TextView
                style="@style/userName"
                android:text="@string/user1" />
            <TextView
                style="@style/time"
                android:text="@string/time13"/>
        </RelativeLayout>
        <TextView
            style="@style/postText"
            android:layout_height="66dp"
            android:text="@string/replay1"/>
        <TextView
            style="@style/replays"/>
        <ImageView
            style="@style/cool"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/block2"
        style="@style/blockStyle"
        android:layout_height="159dp">
        <RelativeLayout
            style="@style/headerBlock">
            <ImageView
                style="@style/avatar"
                android:src="@drawable/user2"/>
            <TextView
                style="@style/userName"
                android:text="@string/user2"/>
            <TextView
                style="@style/time"
                android:text="@string/time2"/>
        </RelativeLayout>
        <TextView
            style="@style/postText"
            android:layout_height="50dp"
            android:text="@string/replay23"/>
        <TextView
            style="@style/replays"
            android:layout_marginTop="127dp"/>
        <ImageView
            style="@style/cool"
            android:layout_marginTop="123dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/block3"
        style="@style/blockStyle"
        android:layout_height="159dp">
        <RelativeLayout
            style="@style/headerBlock">
            <ImageView
                style="@style/avatar"
                android:src="@drawable/user3"/>
            <TextView
                style="@style/userName"
                android:text="@string/user3"/>
            <TextView
                style="@style/time"
                android:text="@string/time13"/>
        </RelativeLayout>
        <TextView
            style="@style/postText"
            android:layout_height="50dp"
            android:text="@string/replay23"/>
        <TextView
            style="@style/replays"
            android:layout_marginTop="127dp"/>
        <ImageView
            style="@style/cool"
            android:layout_marginTop="123dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/highHF"
        android:layout_marginTop="60dp"
        android:orientation="horizontal">
        <ImageView
            style="@style/footerIcon"
            android:layout_width="82dp"
            android:layout_alignParentLeft="true"
            android:src="@drawable/ic_shopping" />
        <ImageView
            style="@style/footerIcon"
            android:layout_marginLeft="82dp"
            android:src="@drawable/ic_book_open_variant"/>
        <ImageView
            style="@style/footerIcon"
            android:layout_marginLeft="164dp"
            android:src="@drawable/ic_cart"/>
        <ImageView
            style="@style/footerIcon"
            android:layout_marginLeft="246dp"
            android:src="@drawable/ic_tag_heart" />
        <LinearLayout
            android:layout_width="82dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:orientation="vertical">
            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/ic_heart_filled"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="6dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:text="@string/profile"
                android:textSize="14dp"
                android:textColor="@color/colorBlue"
                android:textAlignment="center"/>
        </LinearLayout>
    </RelativeLayout>
</LinearLayout>